Revision history for perl module Protocol::WebSocket

0.00905 2011-09-20

 - Fixed random mask generation
 - Fixed 64bit detection

0.00904 2011-08-15

 - Fixed failing tests on perl-5.8.9

0.00903 2011-08-08

 - Support for draft-ietf-hybi-10 WebSocket protocol version

0.00902 2011-05-12

 - API CHANGE: Frame's to_string now returns a Perl string, use to_bytes to get a
   UTF-8 encoded octets
 - Automatically decode when building frame from a Perl string
 - Pay attention to SCRIPT_NAME in PSGI
 - If an origin was passed in, don't change it (Jon Gentle)

0.00901 2011-03-15

 - Added X-Forwarded-Proto header support
 - Fixed SSL
 - Fixed POD
 - Separated unit tests from author tests

0.00900 2011-03-08

 - Added Nginx::Engine example
 - Added possibility to read directly from IO::Handle
 - Added PSGI support

0.0004 2010-11-30

 - Fixed message parsing
 - Fixed port
 - Refactored tests

0.0003 2010-11-28

 - Added examples
 - Added subprotocol parsing and improved tests
 - Fixed handshake parsing and error passing
 - Improved docs
 - Improved tests
 - Made parser more relax
 - Made poll example more robust

0.0002 2010-11-26

 - Initial release