@@ -3,14 +3,16 @@
 use strict;
 use warnings;
 
-use Test::More tests => 33;
+use Test::More tests => 48;
 
 use IO::Handle;
 
 use_ok 'Protocol::WebSocket::Request';
 
-my $req = Protocol::WebSocket::Request->new;
+my $req;
 my $message;
+
+$req = Protocol::WebSocket::Request->new;
 
 ok !$req->is_done;
 ok $req->parse;
@@ -31,6 +33,24 @@ ok $req->parse("Sec-WebSocket-Version: 8\x0d\x0a\x0d\x0a");
 is $req->state => 'done';
 is $req->key   => 'dGhlIHNhbXBsZSBub25jZQ==';
 
+is $req->version       => 'draft-ietf-hybi-10';
+is $req->subprotocol   => 'chat, superchat';
+is $req->resource_name => '/chat';
+is $req->host          => 'server.example.com';
+is $req->origin        => 'http://example.com';
+
+$req = Protocol::WebSocket::Request->new;
+
+ok $req->parse("GET /chat HTTP/1.1\x0d\x0a");
+ok $req->parse("Host: server.example.com\x0d\x0a");
+ok $req->parse("Upgrade: websocket\x0d\x0a");
+ok $req->parse("Connection:keep-alive, Upgrade\x0d\x0a");
+ok $req->parse("Sec-WebSocket-Key: dGhlIHNhbXBsZSBub25jZQ==\x0d\x0a");
+ok $req->parse("Sec-WebSocket-Origin: http://example.com\x0d\x0a");
+ok $req->parse("Sec-WebSocket-Protocol: chat, superchat\x0d\x0a");
+ok $req->parse("Sec-WebSocket-Version: 8\x0d\x0a\x0d\x0a");
+is $req->state         => 'done';
+is $req->key           => 'dGhlIHNhbXBsZSBub25jZQ==';
 is $req->version       => 'draft-ietf-hybi-10';
 is $req->subprotocol   => 'chat, superchat';
 is $req->resource_name => '/chat';
