@@ -2,6 +2,7 @@ Revision history for perl module Protocol::WebSocket
 
 0.00905 2011-09-20
 
+ - Fixed Firefox 7 Connection issue (reported by Rajstennaj Barrabas)
  - Fixed random mask generation
  - Fixed 64bit detection
 
